--- a/datafiles/stages_config.json
+++ b/datafiles/stages_config.json
@@ -4,13 +4,19 @@
       "name": "Let's get started",
       "stage_csv": "stage_1_1.csv",
       "selection_x": 60,
-      "selection_y": 60
+      "selection_y": 60,
+      "blocks": [
+        { "id":3, "num":2 }
+      ]
     },
     {
       "name": "And continue on",
       "stage_csv": "stage_1_2.csv",
       "selection_x": 100,
-      "selection_y": 90
+      "selection_y": 90,
+      "blocks": [
+        { "id":3, "num":6 }
+      ]
     }
   ]
 }
