--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ options/html5/options_html5.yy
 options/linux/options_linux.yy
 options/mac/options_mac.yy
 options/windows/options_windows.yy
+views/54e6e1f5-3d4b-4fcf-9e15-698cf2180c7a.yy
